# NPD_Face

./: README.md
Data/Model1/: modelIndex.txt  stage_0_tree0.npd  stage_0_tree1.npd  stage_0_tree2.npd  stage_0_tree3.npd  stage_0_tree4.npd  stage_0_tree5.npd  stage_0_tree6.npd  stage_1_tree0.npd  stage_1_tree1.npd  stage_1_tree2.npd  stage_1_tree3.npd
Data/Model2/: modelIndex.txt  stage_0_tree0.npd  stage_0_tree1.npd  stage_0_tree2.npd  stage_0_tree3.npd  stage_0_tree4.npd  stage_10_tree0.npd  stage_10_tree1.npd  stage_10_tree2.npd  stage_11_tree0.npd  stage_11_tree1.npd  stage_11_tree2.npd  stage_11_tree3.npd  stage_11_tree4.npd  stage_11_tree5.npd  stage_11_tree6.npd  stage_12_tree0.npd  stage_12_tree1.npd  stage_12_tree2.npd  stage_13_tree0.npd  stage_13_tree1.npd  stage_13_tree2.npd  stage_13_tree3.npd  stage_14_tree0.npd  stage_14_tree1.npd  stage_14_tree2.npd  stage_14_tree3.npd  stage_14_tree4.npd  stage_15_tree0.npd  stage_15_tree1.npd  stage_15_tree2.npd  stage_15_tree3.npd  stage_15_tree4.npd  stage_15_tree5.npd  stage_15_tree6.npd  stage_15_tree7.npd  stage_16_tree0.npd  stage_16_tree1.npd  stage_16_tree2.npd  stage_16_tree3.npd  (+111 more)
Data/Model3/: modelIndex.txt  stage_0_tree0.npd  stage_0_tree1.npd  stage_0_tree2.npd  stage_0_tree3.npd  stage_0_tree4.npd  (+433 more)
detect/: main.cpp
train/: Bootstrap.cpp  Bootstrap.h  Bootstrap的副本.cpp  CMakeLists.txt  Configuration.h  DQTree.cpp  DQTree.h  GentleAdaBoost.cpp  GentleAdaBoost.h  Message.h  Model.cpp  Model.h  NPDFeature.cpp  NPDFeature.h  ReadData.cpp  ReadData.h  main.cpp  minMSE.cpp  minMSE.cu  minMSE.h
